2003-09-01 John Fleck <jfleck@inkstain.net>

	* ri18n.xml
	* rnstandards.xml
	make language in freedesktop discussion more cautious per
	jrb's suggest
	minor fix in translation list

2003-09-01  Danilo Šegan  <dsegan@gmx.net>

	* rni18n.xml: Added Norwegian to the list, and corrected the sort
	order.

2003-08-31 John Fleck <jfleck@inkstain.net>

	* rnstandards.xml
	* rndocs.xml
	* release-notes.xml
	miscellaneous edits

2003-08-31  Danilo Šegan  <dsegan@gmx.net>

	* rni18n.xml: Updated the list of supported languages, replaced
	Carlos Perrelo with Kjartan Maraas.

2003-08-29 John Fleck <jfleck@inkstain.net>

	* rninstallation.xml
	update build order

2003-08-29  Telsa Gwynne <hobbit@aloss.ukuu.org.uk>

	* releasenotes.xml: fix typo

2003-08-27 John Fleck <jfleck@inkstain.net>

	* releasenotes.xml
	* rnepiphany.xml
	* rngucharmap.xml
	* rndesktop.xml
	* rna11y.xml
	* rnstandards.xml
	various edits based on helpful comments from many

2003-08-27  Andrew Sobala  <aes@gnome.org>

	* release-notes.xml: fix typo
	* rncontrolcenter.xml: fix typo

2003-08-27 Luis Villa <louie@ximian.com>

	* rna11y.xml: fix tyop
	* release-notes.xml: wording cleanups
	* rnepiphany.xml: wording cleanups
	* rnpdf.xml: flesh out a touch.
	* rni18n.xml: tyop
	
2003-08-26 John Fleck <jfleck@inkstain.net>

	* rn18n.xml
	add names of translation team leaders

2003-08-25 John Fleck <jfleck@inkstain.net>

	* rni18n.xml
	add list of languages supported as of Aug. 25
	(this'll bear another update before release)
	
2003-08-24 John Fleck <jfleck@inkstain.net>

	* rni18n.xml
	placeholder for discussion of GNOME's translation
	goodness

2003-08-22 John Fleck <jfleck@inkstain.net>

	add
	* rna11y.xml
	edit
	* rngucharmap.xml
	* reale-notes.xml
	add a11y section, stuff from Noah for gucharmap
	section

2003-08-18 John Fleck <jfleck@inkstainn.net>

	add
	* rnnewmaintainers.xml
	add placeholder file for the "welcome to the
	new maintainers" schtick

2003-08-18 John Fleck <jfleck@inkstainn.net>

	add