@@ -81,6 +81,11 @@
       </listitem>
       <listitem>
 	<para>
+	  English
+	</para>
+      </listitem>
+      <listitem>
+	<para>
 	  Finnish 
 	</para>
       </listitem>
@@ -121,7 +126,7 @@
       </listitem>
       <listitem>
 	<para>
-	  Norwegian 
+	  Norwegian bokm&aring;l
 	</para>
       </listitem>
       <listitem>
@@ -136,12 +141,7 @@
       </listitem>
       <listitem>
 	<para>
-	  Serbian 
-	</para>
-      </listitem>
-      <listitem>
-	<para>
-	  Serbian Latin 
+	  Serbian
 	</para>
       </listitem>
       <listitem>
