@@ -1,3 +1,8 @@
+2003-09-01  Danilo Šegan  <dsegan@gmx.net>
+
+	* rni18n.xml: Add "bokm&aring;l" to Norwegian; removed Serbian
+	Latin (Serbian is enough); added English.
+
 2003-09-01 John Fleck <jfleck@inkstain.net>
 
 	* ri18n.xml
